fix overflow prob

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .carousel-track {
